@@ -848,6 +848,8 @@ public :
     virtual void SetTitle( const wxString& title, wxFontEncoding encoding ) = 0;
 
     virtual bool EnableCloseButton(bool enable) = 0;
+    virtual bool EnableMaximizeButton(bool enable) = 0;
+    virtual bool EnableMinimizeButton(bool enable) = 0;
 
     virtual bool IsMaximized() const = 0;
 
