@@ -77,6 +77,8 @@ public:
     // EnableCloseButton(false) used to disable the "Close"
     // button on the title bar
     virtual bool EnableCloseButton(bool enable = true) wxOVERRIDE;
+    virtual bool EnableMaximizeButton(bool enable = true) wxOVERRIDE;
+    virtual bool EnableMinimizeButton(bool enable = true) wxOVERRIDE;
 
     virtual void SetLabel(const wxString& label) { SetTitle( label ); }
     virtual wxString GetLabel() const            { return GetTitle(); }
