@@ -215,6 +215,23 @@ bool wxTopLevelWindowMac::EnableCloseButton(bool enable)
     return false;
 }
 
+bool wxTopLevelWindowMac::EnableMaximizeButton(bool enable)
+{
+    // Both wxRESIZE_BORDER and wxMAXIMIZE_BOX create a resize border and
+    // add a maximize button.
+    if ( HasFlag(wxMAXIMIZE_BOX) || HasFlag(wxRESIZE_BORDER) )
+        return m_nowpeer->EnableMaximizeButton( enable);
+    return false;
+}
+
+bool wxTopLevelWindowMac::EnableMinimizeButton(bool enable)
+{
+    if ( HasFlag(wxMINIMIZE_BOX) )
+        return m_nowpeer->EnableMinimizeButton( enable);
+
+    return false;
+}
+
 void wxTopLevelWindowMac::RequestUserAttention(int flags)
 {
     return m_nowpeer->RequestUserAttention(flags);
